<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions</string>
    <string name="some_instructions">Some instructions</string>
    <string name="next">Next</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="welcome">Welcome!</string>
    <string name="this_is_awesome_shoe_store_inventory">This is awesome Shoe Store Inventory</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="enter_description">Enter description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>